Added export categories

--- a/assets/zip/personnal-data-export-navigator/Export.html
+++ b/assets/zip/personnal-data-export-navigator/Export.html
@@ -7,16 +7,25 @@
 	<link href="assets/material-design-icons/material-icons.css" rel="stylesheet">
 	<!--Import materialize.css-->
 	<link type="text/css" rel="stylesheet" href="assets/materialize/css/materialize.min.css"  media="screen,projection"/>
+
+	<link rel="stylesheet" href="assets/css/main.css" />
 </head>
 <body>
 
-	<nav class="light-blue lighten-1" role="navigation">
-		<div class="nav-wrapper container">
-			<a id="logo-container" href="#" class="brand-logo">
-				Comunic <smalll>Data Export</small>
-			</a>
-		</div>
-	</nav>
+	<ul class="sidenav sidenav-fixed">
+		<li class="bold"><a href="#" class="waves-effect waves-teal">Comunic data export</a></li>
+		<li class="bold"><a href="#user-info" class="waves-effect waves-teal">User Information</a></li>
+		<li class="bold"><a href="#friends-list" class="waves-effect waves-teal">Friends List</a></li>
+		<li class="bold"><a href="#posts" class="waves-effect waves-teal">Posts</a></li>
+		<li class="bold"><a href="#comments" class="waves-effect waves-teal">Comments</a></li>
+		<li class="bold"><a href="#likes" class="waves-effect waves-teal">Likes</a></li>
+		<li class="bold"><a href="#survey-responses" class="waves-effect waves-teal">Responses to surveys</a></li>
+		<li class="bold"><a href="#movies" class="waves-effect waves-teal">Movies</a></li>
+		<li class="bold"><a href="#all-conversations-message" class="waves-effect waves-teal">Conversations Messages (ALL)</a></li>
+		<li class="bold"><a href="#conversations" class="waves-effect waves-teal">Conversations</a></li>
+	</ul>
+
+
 
 	<!--JavaScript at end of body for optimized loading-->
 	<script type="text/javascript" src="assets/materialize/js/materialize.min.js"></script>
