--- a/assets/zip/personnal-data-export-navigator/Export.html
+++ b/assets/zip/personnal-data-export-navigator/Export.html
@@ -12,22 +12,72 @@
 </head>
 <body>
 
-	<ul class="sidenav sidenav-fixed">
-		<li class="bold"><a href="#" class="waves-effect waves-teal">Comunic data export</a></li>
-		<li class="bold"><a href="#user-info" class="waves-effect waves-teal">User Information</a></li>
-		<li class="bold"><a href="#friends-list" class="waves-effect waves-teal">Friends List</a></li>
-		<li class="bold"><a href="#posts" class="waves-effect waves-teal">Posts</a></li>
-		<li class="bold"><a href="#comments" class="waves-effect waves-teal">Comments</a></li>
-		<li class="bold"><a href="#likes" class="waves-effect waves-teal">Likes</a></li>
-		<li class="bold"><a href="#survey-responses" class="waves-effect waves-teal">Responses to surveys</a></li>
-		<li class="bold"><a href="#movies" class="waves-effect waves-teal">Movies</a></li>
-		<li class="bold"><a href="#all-conversations-message" class="waves-effect waves-teal">Conversations Messages (ALL)</a></li>
-		<li class="bold"><a href="#conversations" class="waves-effect waves-teal">Conversations</a></li>
-	</ul>
+	<header>
 
+		<div class="container"><a href="#" data-target="nav-mobile" class="top-nav sidenav-trigger waves-effect waves-light circle hide-on-large-only"><i class="material-icons">menu</i></a></div>
+
+		<ul id="nav-mobile" class="sidenav sidenav-fixed">
+			<li class="bold"><a href="#home" class="waves-effect waves-teal">Comunic data export</a></li>
+			<li class="bold"><a href="#user-info" class="waves-effect waves-teal">User Information</a></li>
+			<li class="bold"><a href="#friends-list" class="waves-effect waves-teal">Friends List</a></li>
+			<li class="bold"><a href="#posts" class="waves-effect waves-teal">Posts</a></li>
+			<li class="bold"><a href="#comments" class="waves-effect waves-teal">Comments</a></li>
+			<li class="bold"><a href="#likes" class="waves-effect waves-teal">Likes</a></li>
+			<li class="bold"><a href="#survey-responses" class="waves-effect waves-teal">Responses to surveys</a></li>
+			<li class="bold"><a href="#movies" class="waves-effect waves-teal">Movies</a></li>
+			<li class="bold"><a href="#all-conversations-message" class="waves-effect waves-teal">Conversations Messages (ALL)</a></li>
+			<li class="bold"><a href="#conversations" class="waves-effect waves-teal">Conversations</a></li>
+		</ul>
+
+	</header>
+
+	<main>
+
+		<div id="home" class="category container">
+			Please use the navigation bar located at the left of this page to access to the different categories of content.
+		</div>
+
+		<div id="user-info" class="category container">
+			Loading user information
+		</div>
+
+		<div id="friends-list" class="category container">
+			Loading friends list
+		</div>
+
+		<div id="posts" class="category container">
+			Loading posts
+		</div>
+
+		<div id="comments" class="category container">
+			Loading comments
+		</div>
+		
+		<div id="likes" class="category container">
+			Loading likes
+		</div>
+
+		<div id="survey-responses" class="category container">
+			Loading survey responses
+		</div>
+		
+		<div id="movies" class="category container">
+			Loading movies
+		</div>
+
+		<div id="all-conversations-message" class="category container">
+			Loading all conversation messages
+		</div>
+
+		<div id="conversations" class="category container">
+			Loading conversations
+		</div>
+
+	</main>
 
 
 	<!--JavaScript at end of body for optimized loading-->
 	<script type="text/javascript" src="assets/materialize/js/materialize.min.js"></script>
+	<script src="assets/js/main.js"></script>
 </body>
 </html>
