Begin to display posts

--- a/assets/zip/personnal-data-export-navigator/Export.html
+++ b/assets/zip/personnal-data-export-navigator/Export.html
@@ -81,8 +81,11 @@
 			</table>
 		</div>
 
+		<!-- Posts list -->
 		<div id="posts" class="category container">
-			Loading posts
+			<div id="posts-target">
+				<!-- Posts will go here -->
+			</div>
 		</div>
 
 		<div id="comments" class="category container">
