Improved project structure

--- a/assets/zip/personnal-data-export-navigator/Export.html
+++ b/assets/zip/personnal-data-export-navigator/Export.html
@@ -118,6 +118,9 @@
 	<!--JavaScript at end of body for optimized loading-->
 	<script type="text/javascript" src="assets/materialize/js/materialize.min.js"></script>
 	<script src="assets/js/utils.js"></script>
+	<script src="assets/js/categories/userInfo.js"></script>
+	<script src="assets/js/categories/friends.js"></script>
+	<script src="assets/js/categories/posts.js"></script>
 	<script src="assets/js/main.js"></script>
 </body>
 </html>
