Display all comments

--- a/assets/zip/personnal-data-export-navigator/Export.html
+++ b/assets/zip/personnal-data-export-navigator/Export.html
@@ -88,8 +88,29 @@
 			</div>
 		</div>
 
+		<!-- Full comments list -->
 		<div id="comments" class="category container">
-			Loading comments
+			
+			<h1>All your comments</h1>
+
+			<table id="all-comments-table">
+
+				<thead>
+					<tr>
+						<th>Number</th>
+						<th>Post ID</th>
+						<th>Date</th>
+						<th>Content</th>
+						<th>Image</th>
+					</tr>
+				</thead>
+
+
+				<tbody>
+					<!-- Comments will go here -->
+				</tbody>
+
+			</table>
 		</div>
 		
 		<div id="likes" class="category container">
@@ -121,6 +142,7 @@
 	<script src="assets/js/categories/userInfo.js"></script>
 	<script src="assets/js/categories/friends.js"></script>
 	<script src="assets/js/categories/posts.js"></script>
+	<script src="assets/js/categories/comments.js"></script>
 	<script src="assets/js/main.js"></script>
 </body>
 </html>
