Improved appearance of processed categories

--- a/assets/zip/personnal-data-export-navigator/Export.html
+++ b/assets/zip/personnal-data-export-navigator/Export.html
@@ -42,6 +42,9 @@
 	<main>
 
 		<div id="home" class="category container">
+
+			<h1>Exported Comunic Account Data Viewer</h1>
+
 			Please use the navigation bar located at the left of this page to access to the different categories of content.
 		</div>
 
@@ -70,6 +73,9 @@
 
 		<!-- User friends list -->
 		<div id="friends-list" class="category container">
+
+			<h1>Your friends list</h1>
+
 			<table id="friends-list-table">
 				<thead>
 					<th>Name</th>
@@ -83,6 +89,9 @@
 
 		<!-- Posts list -->
 		<div id="posts" class="category container">
+
+			<h1>All your posts</h1>
+
 			<div id="posts-target">
 				<!-- Posts will go here -->
 			</div>
