Display user likes

--- a/assets/zip/personnal-data-export-navigator/Export.html
+++ b/assets/zip/personnal-data-export-navigator/Export.html
@@ -122,8 +122,27 @@
 			</table>
 		</div>
 		
+		<!-- All user likes -->
 		<div id="likes" class="category container">
-			Loading likes
+			<h1>All your likes</h1>
+
+			<table id="all-likes-table">
+
+				<thead>
+					<tr>
+						<th>Number</th>
+						<th>Date</th>
+						<th>Element type</th>
+						<th>Element ID</th>
+					</tr>
+				</thead>
+
+				<tbody>
+					<!-- Likes will go here-->
+				</tbody>
+
+			</table>
+
 		</div>
 
 		<div id="survey-responses" class="category container">
@@ -152,6 +171,7 @@
 	<script src="assets/js/categories/friends.js"></script>
 	<script src="assets/js/categories/posts.js"></script>
 	<script src="assets/js/categories/comments.js"></script>
+	<script src="assets/js/categories/likes.js"></script>
 	<script src="assets/js/main.js"></script>
 </body>
 </html>
