Display survey responses

--- a/assets/zip/personnal-data-export-navigator/Export.html
+++ b/assets/zip/personnal-data-export-navigator/Export.html
@@ -145,8 +145,28 @@
 
 		</div>
 
+		<!-- All survey responses -->
 		<div id="survey-responses" class="category container">
-			Loading survey responses
+			
+			<h1>All your responses to surveys</h1>
+
+			<table id="all-survey-responses">
+
+				<thead>
+					<tr>
+						<th>Response number</th>
+						<th>Survey Number</th>
+						<th>Choice number</th>
+						<th>Date</th>
+					</tr>
+				</thead>
+
+				<tbody>
+					<!-- Survey responses will go here -->
+				</tbody>
+
+			</table>
+
 		</div>
 		
 		<div id="movies" class="category container">
@@ -172,6 +192,7 @@
 	<script src="assets/js/categories/posts.js"></script>
 	<script src="assets/js/categories/comments.js"></script>
 	<script src="assets/js/categories/likes.js"></script>
+	<script	src="assets/js/categories/survey.js"></script>
 	<script src="assets/js/main.js"></script>
 </body>
 </html>
