Display user movies.

--- a/assets/zip/personnal-data-export-navigator/Export.html
+++ b/assets/zip/personnal-data-export-navigator/Export.html
@@ -169,8 +169,31 @@
 
 		</div>
 		
+		<!-- Entire movies list -->
 		<div id="movies" class="category container">
-			Loading movies
+			
+			<h1>Your movies</h1>
+
+
+			<table id="full-movie-list-table">
+
+				<thead>
+					<tr>
+						<th>Number</th>
+						<th>Name</th>
+						<th>File type</th>
+						<th>File size</th>
+						<th>Actions</th>
+					</tr>
+				</thead>
+
+
+				<tbody>
+					<!-- Movies will go here -->
+				</tbody>
+
+			</table>
+
 		</div>
 
 		<div id="all-conversations-message" class="category container">
@@ -193,6 +216,7 @@
 	<script src="assets/js/categories/comments.js"></script>
 	<script src="assets/js/categories/likes.js"></script>
 	<script	src="assets/js/categories/survey.js"></script>
+	<script src="assets/js/categories/movies.js"></script>
 	<script src="assets/js/main.js"></script>
 </body>
 </html>
