Added all conversation messages

--- a/assets/zip/personnal-data-export-navigator/Export.html
+++ b/assets/zip/personnal-data-export-navigator/Export.html
@@ -196,8 +196,28 @@
 
 		</div>
 
+		<!-- Entire list of conversation messages -->
 		<div id="all-conversations-message" class="category container">
-			Loading all conversation messages
+			
+			<h1>All your conversation messages</h1>
+
+			<table id="all-conversation-messages-table">
+
+				<thead>
+					<tr>
+						<th>Number</th>
+						<th>Date</th>
+						<th>Message</th>
+						<th>Image</th>
+					</tr>
+				</thead>
+
+				<tbody>
+					<!-- Conversation messages will go here -->
+				</tbody>
+
+			</table>
+
 		</div>
 
 		<div id="conversations" class="category container">
@@ -217,6 +237,7 @@
 	<script src="assets/js/categories/likes.js"></script>
 	<script	src="assets/js/categories/survey.js"></script>
 	<script src="assets/js/categories/movies.js"></script>
+	<script src="assets/js/categories/allConversationMessages.js"></script>
 	<script src="assets/js/main.js"></script>
 </body>
 </html>
