Update all conversation messages screen

--- a/assets/zip/personnal-data-export-navigator/Export.html
+++ b/assets/zip/personnal-data-export-navigator/Export.html
@@ -178,8 +178,8 @@
 					<tr>
 						<th>Number</th>
 						<th>Date</th>
+						<th>File (if any)</th>
 						<th>Message</th>
-						<th>Image</th>
 					</tr>
 				</thead>
 
