Add the list of groups of the user

--- a/assets/zip/personnal-data-export-navigator/Export.html
+++ b/assets/zip/personnal-data-export-navigator/Export.html
@@ -34,6 +34,7 @@
 			<li class="bold"><a href="#survey-responses" class="waves-effect waves-teal">Responses to surveys</a></li>
 			<li class="bold"><a href="#all-conversations-message" class="waves-effect waves-teal">Conversations Messages (ALL)</a></li>
 			<li class="bold"><a href="#conversations" class="waves-effect waves-teal">Conversations</a></li>
+			<li class="bold"><a href="#groups" class="waves-effect waves-teal">Groups</a></li>
 		</ul>
 
 	</header>
@@ -202,6 +203,30 @@
 
 		</div>
 
+		<!-- Groups memberships -->
+		<div id="groups" class="category container">
+			
+			<h1>Your groups membership</h1>
+
+			<table id="groups-list-table">
+				<thead>
+					<th>#</th>
+					<th>Icon</th>
+					<th>Name</th>
+					<th>Members count</th>
+					<th>Visibility</th>
+					<th>Registration level</th>
+					<th>Posts creation level</th>
+					<th>Virtual directory</th>
+					<th>Membership</th>
+					<th>Following</th>
+				</thead>
+				<tbody>
+				</tbody>
+			</table>
+
+		</div>
+
 	</main>
 
 
@@ -216,6 +241,7 @@
 	<script	src="assets/js/categories/survey.js"></script>
 	<script src="assets/js/categories/allConversationMessages.js"></script>
 	<script src="assets/js/categories/conversations.js"></script>
+	<script src="assets/js/categories/groups.js"></script>
 	<script src="assets/js/main.js"></script>
 </body>
 </html>
